WW-2282 Apply a number of "FindBugs" performance optimizations submitted by Giovanni Azua Garcia. Most (or all) of these are line for line substitutions.
git-svn-id: https://svn.apache.org/repos/asf/struts/struts2/trunk@591174 13f79535-47bb-0310-9956-ffa450edef68